# zwift

./: .cspell.json  .cspell.yaml  .editorconfig  .gitignore  .hadolint.yaml  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlint.yaml  .shellcheckrc  .yamllint.yaml  .zwift-credentials.template  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build-image.sh  entrypoint.sh  flake.nix  install.sh  run_zwift.sh  setup_and_run_zwift.sh  squash.Dockerfile  update_zwift.sh  zoffline.sh  zwift-auth.sh  zwift.sh  zwift.verb  zwift_common.sh
.config/: .cspell.json  .hadolint.yaml  .markdownlint-cli2.jsonc
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  help.md  help.yaml
.github/workflows/: dockerhub_prune.yaml  github_pages.yaml  lint_bash_scripts.yaml  lint_yaml.yaml  (+16 more)
assets/: Zwift.desktop
docs/: Gemfile  _config.yml  graphics.md  index.md  more.md  nixos.md  options.md  troubleshooting.md
install/: install.sh
nix/: module-container.nix  module-fhs.nix  module-options-common.nix  module.nix  runfromprocess.nix  zwift-common.nix  zwift-container-package.nix  zwift-fhs-package.nix  zwift-fhs.nix  zwift-native-package.nix  zwift-package.nix  zwift-scripts.nix
runfromprocess-rs/: Cargo.toml  README.md
runfromprocess-rs/src/: main.rs
src/: Dockerfile  build-image.sh  entrypoint.sh  lib.sh  run_zwift.sh  update-image.sh  update_zwift.sh  zwift-auth.sh  zwift-install.sh  zwift-nix-fhs.sh  zwift-run.sh  zwift-wrapper.sh  zwift.sh
zwift/: Dockerfile  README.md  entrypoint.sh  zwift.sh
(+39 files in other folders)
